--- a/kubeflow/lab-02.ipynb
+++ b/kubeflow/lab-02.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Improving Google's [Continuous training pipeline with Kubeflow Pipeline and AI Platform](https://github.com/GoogleCloudPlatform/mlops-on-gcp/blob/master/on_demand/kfp-caip-sklearn/lab-02-kfp-pipeline/exercises/lab-02.ipynb) example"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Contents\n",
     "1. [Understanding the pipeline design](#Understanding-the-pipeline-design)\n",
@@ -25,29 +26,29 @@
     "\n",
     "\n",
     "In this lab, you will build, deploy, and run a KFP pipeline that orchestrates **BigQuery** and **AI Platform** services to train, tune, and deploy a **scikit-learn** model.\n"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Understanding the pipeline design\n"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "The workflow implemented by the pipeline is defined using a Python based Domain Specific Language (DSL). The pipeline's DSL is in the `covertype_training_pipeline.py` file that we will generate below.\n",
     "\n",
     "The pipeline's DSL has been designed to avoid hardcoding any environment specific settings like file paths or connection strings. These settings are provided to the pipeline code through a set of environment variables.\n",
     "\n",
     "**NOTE: We will create `covertype_training_pipeline.py` in the next step. The environment variables are [set later](#Configure-environment-settings) in the document.**"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "The pipeline uses a mix of custom and pre-build components.\n",
     "\n",
@@ -59,11 +60,11 @@
     "    - **Retrieve Best Run**. This component retrieves a tuning metric and hyperparameter values for the best run of a AI Platform Training hyperparameter tuning job.\n",
     "    - **Evaluate Model**. This component evaluates a *sklearn* trained model using a provided metric and a testing dataset.\n",
     "    "
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Exercise\n",
     "\n",
@@ -71,12 +72,13 @@
     "\n",
     "<ql-infobox><b>NOTE:</b> If you need help, you may take a look at the complete solution by navigating to **mlops-on-gcp > workshops > kfp-caip-sklearn > lab-02-kfp-pipeline** and opening [**lab-02.ipynb**](https://github.com/GoogleCloudPlatform/mlops-on-gcp/blob/master/on_demand/kfp-caip-sklearn/lab-02-kfp-pipeline/lab-02.ipynb).\n",
     "</ql-infobox>"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%%writefile ./pipeline/covertype_training_pipeline.py\n",
     "# Copyright 2019 Google LLC\n",
@@ -110,7 +112,7 @@
     "from kfp.gcp import use_gcp_secret\n",
     "\n",
     "# Defaults and environment settings\n",
-    "BASE_IMAGE = os.getenv('BASE_IMAGE') # set later in 2B\n",
+    "BASE_IMAGE = os.getenv('BASE_IMAGE') # set later in section 2B\n",
     "TRAINER_IMAGE = os.getenv('TRAINER_IMAGE') # set later in 2C\n",
     "RUNTIME_VERSION = os.getenv('RUNTIME_VERSION') # set in 2D\n",
     "PYTHON_VERSION = os.getenv('PYTHON_VERSION') # set in 2D\n",
@@ -163,7 +165,7 @@
     "         \"\"\"\n",
     "    # template engine is similar to the Python format() method\n",
     "    query = Template(sampling_query_template).render(\n",
-    "        source_table=source_table_name, num_lots=num_lots, lots=str(lots)[1:-1]) # this is removing [] from the srt\n",
+    "        source_table=source_table_name, num_lots=num_lots, lots=str(lots)[1:-1]) # this is removing [] from the str\n",
     "\n",
     "    return query\n",
     "\n",
@@ -220,7 +222,13 @@
     "\n",
     "    validation_file_path = '{}/{}'.format(gcs_root, VALIDATION_FILE_PATH)\n",
     "\n",
-    "    create_validation_split = # TODO - use the bigquery_query_op\n",
+    "    create_validation_split = bigquery_query_op(\n",
+    "        query=query,\n",
+    "        project_id=project_id,\n",
+    "        dataset_id=dataset_id,\n",
+    "        table_id='',\n",
+    "        output_gcs_path=validation_file_path,\n",
+    "        dataset_location=dataset_location)\n",
     "\n",
     "    # Create the testing split\n",
     "    query = generate_sampling_query(\n",
@@ -228,7 +236,13 @@
     "\n",
     "    testing_file_path = '{}/{}'.format(gcs_root, TESTING_FILE_PATH)\n",
     "\n",
-    "    create_testing_split = # TO DO: Use the bigquery_query_op\n",
+    "    create_testing_split = bigquery_query_op(\n",
+    "        query=query,\n",
+    "        project_id=project_id,\n",
+    "        dataset_id=dataset_id,\n",
+    "        table_id='',\n",
+    "        output_gcs_path=testing_file_path,\n",
+    "        dataset_location=dataset_location)\n",
     "   \n",
     "\n",
     "    # Tune hyperparameters\n",
@@ -242,9 +256,16 @@
     "    job_dir = '{}/{}/{}'.format(gcs_root, 'jobdir/hypertune',\n",
     "                                kfp.dsl.RUN_ID_PLACEHOLDER)\n",
     "\n",
-    "    hypertune = # TO DO: Use the mlengine_train_op\n",
+    "    # parameter description: https://github.com/kubeflow/pipelines/tree/0.2.5/components/gcp/ml_engine/train#runtime-arguments\n",
+    "    hypertune = mlengine_train_op(\n",
+    "        project_id=project_id,\n",
+    "        region=region,\n",
+    "        master_image_uri=TRAINER_IMAGE, # taken from environment variable\n",
+    "        job_dir=job_dir,\n",
+    "        args=tune_args,\n",
+    "        training_input=hypertune_settings) # string argument with the hyperparameter config json \n",
     "\n",
-    "    # Retrieve the best trial\n",
+    "    # Retrieve the best trial (custom component defined in helper_components.py)\n",
     "    get_best_trial = retrieve_best_run_op(\n",
     "            project_id, hypertune.outputs['job_id'])\n",
     "\n",
@@ -260,20 +281,26 @@
     "        get_best_trial.outputs['max_iter'], '--hptune', 'False'\n",
     "    ]\n",
     "\n",
-    "    train_model = # TO DO: Use the mlengine_train_op\n",
+    "    train_model = mlengine_train_op(\n",
+    "        project_id=project_id,\n",
+    "        region=region,\n",
+    "        master_image_uri=TRAINER_IMAGE, # taken from environment variable\n",
+    "        job_dir=job_dir,\n",
+    "        args=train_args) \n",
     "\n",
-    "    # Evaluate the model on the testing split\n",
+    "    # Evaluate the model on the testing split (custom component in pipeline/helper_components.py)\n",
     "    eval_model = evaluate_model_op(\n",
     "        dataset_path=str(create_testing_split.outputs['output_gcs_path']),\n",
     "        model_path=str(train_model.outputs['job_dir']),\n",
-    "        metric_name=evaluation_metric_name)\n",
+    "        metric_name=evaluation_metric_name) # evaluation_metric_name is argument pass to main function\n",
     "\n",
     "    # Deploy the model if the primary metric is better than threshold\n",
+    "    # parameter description https://github.com/kubeflow/pipelines/tree/0.2.5/components/gcp/ml_engine/deploy#runtime-arguments\n",
     "    with kfp.dsl.Condition(eval_model.outputs['metric_value'] > evaluation_metric_threshold):\n",
     "        deploy_model = mlengine_deploy_op(\n",
     "        model_uri=train_model.outputs['job_dir'],\n",
     "        project_id=project_id,\n",
-    "        model_id=model_id,\n",
+    "        model_id=model_id, # this one and below are args passed to main functon\n",
     "        version_id=version_id,\n",
     "        runtime_version=RUNTIME_VERSION,\n",
     "        python_version=PYTHON_VERSION,\n",
@@ -284,12 +311,11 @@
     "    if USE_KFP_SA == 'True':\n",
     "        kfp.dsl.get_pipeline_conf().add_op_transformer(\n",
     "              use_gcp_secret('user-gcp-sa'))"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "The custom components execute in a container image defined in `base_image/Dockerfile`.\n",
     "\n",
@@ -308,27 +334,27 @@
     "\n",
     "ENTRYPOINT [\"python\", \"train.py\"]\n",
     "```"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": []
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Building and deploying the pipeline\n",
     "\n",
     "Before deploying to AI Platform Pipelines, the pipeline DSL has to be compiled into a pipeline runtime format, also refered to as a pipeline package.  The runtime format is based on [Argo Workflow](https://github.com/argoproj/argo), which is expressed in YAML. \n"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Configure environment settings\n",
     "\n",
@@ -342,128 +368,129 @@
     "2. Use the value of the `host` variable in the **Connect to this Kubeflow Pipelines instance from a Python client via Kubeflow Pipelines SKD** section of the **SETTINGS** window.\n",
     "\n",
     "Run gsutil ls without URLs to list all of the Cloud Storage buckets under your default project ID."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "!gsutil ls"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "**HINT:** \n",
     "\n",
     "For **ENDPOINT**, use the value of the `host` variable in the **Connect to this Kubeflow Pipelines instance from a Python client via Kubeflow Pipelines SDK** section of the **SETTINGS** window.\n",
     "\n",
     "For **ARTIFACT_STORE_URI**, copy the bucket name which starts with the qwiklabs-gcp-xx-xxxxxxx-kubeflowpipelines-default prefix from the previous cell output. Your copied value should look like **'gs://qwiklabs-gcp-xx-xxxxxxx-kubeflowpipelines-default'**\n"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "REGION = 'us-central1'\n",
     "ENDPOINT = '337dd39580cbcbd2-dot-us-central2.pipelines.googleusercontent.com' # TO DO: REPLACE WITH YOUR ENDPOINT\n",
     "ARTIFACT_STORE_URI = 'gs://qwiklabs-gcp-xx-xxxxxxx-kubeflowpipelines-default' # TO DO: REPLACE WITH YOUR ARTIFACT_STORE NAME \n",
     "PROJECT_ID = !(gcloud config get-value core/project)\n",
     "PROJECT_ID = PROJECT_ID[0]"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Build the trainer image"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "IMAGE_NAME='trainer_image'\n",
     "TAG='latest'\n",
     "TRAINER_IMAGE='gcr.io/{}/{}:{}'.format(PROJECT_ID, IMAGE_NAME, TAG)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### **Note**: Please ignore any **incompatibility ERROR** that may appear for the packages visions as it will not affect the lab's functionality."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "!gcloud builds submit --timeout 15m --tag $TRAINER_IMAGE trainer_image"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Build the base image for custom components"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "IMAGE_NAME='base_image'\n",
     "TAG='latest'\n",
     "BASE_IMAGE='gcr.io/{}/{}:{}'.format(PROJECT_ID, IMAGE_NAME, TAG)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "!gcloud builds submit --timeout 15m --tag $BASE_IMAGE base_image"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Compile the pipeline\n",
     "\n",
     "You can compile the DSL using an API from the **KFP SDK** or using the **KFP** compiler.\n",
     "\n",
     "To compile the pipeline DSL using the **KFP** compiler."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### Set the pipeline's compile time settings\n",
     "\n",
     "The pipeline can run using a security context of the GKE default node pool's service account or the service account defined in the `user-gcp-sa` secret of the Kubernetes namespace hosting KFP. If you want to use the `user-gcp-sa` service account you change the value of `USE_KFP_SA` to `True`.\n",
     "\n",
     "Note that the default AI Platform Pipelines configuration does not define the `user-gcp-sa` secret."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "USE_KFP_SA = False\n",
     "\n",
@@ -477,19 +504,18 @@
     "%env COMPONENT_URL_SEARCH_PREFIX={COMPONENT_URL_SEARCH_PREFIX}\n",
     "%env RUNTIME_VERSION={RUNTIME_VERSION}\n",
     "%env PYTHON_VERSION={PYTHON_VERSION}"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### Use the CLI compiler to compile the pipeline"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Exercise\n",
     "\n",
@@ -497,43 +523,43 @@
     "\n",
     "<ql-infobox><b>NOTE:</b> If you need help, you may take a look at the complete solution by navigating to **mlops-on-gcp > workshops > kfp-caip-sklearn > lab-02-kfp-pipeline** and opening **lab-02.ipynb**.\n",
     "</ql-infobox>"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# TO DO: Your code goes here"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "The result is the `covertype_training_pipeline.yaml` file. "
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "!head covertype_training_pipeline.yaml"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Deploy the pipeline package"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Exercise\n",
     "\n",
@@ -541,63 +567,64 @@
     "\n",
     "<ql-infobox><b>NOTE:</b> If you need help, you may take a look at the complete solution by navigating to **mlops-on-gcp > workshops > kfp-caip-sklearn > lab-02-kfp-pipeline** and opening **lab-02.ipynb**.\n",
     "</ql-infobox>"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "PIPELINE_NAME='covertype_continuous_training'\n",
     "\n",
     "# TO DO: Your code goes here"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Submitting pipeline runs\n",
     "\n",
     "You can trigger pipeline runs using an API from the KFP SDK or using KFP CLI. To submit the run using KFP CLI, execute the following commands. Notice how the pipeline's parameters are passed to the pipeline run.\n",
     "\n",
     "### List the pipelines in AI Platform Pipelines"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "!kfp --endpoint $ENDPOINT pipeline list"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Submit a run\n",
     "\n",
     "Find the ID of the `covertype_continuous_training` pipeline you uploaded in the previous step and update the value of `PIPELINE_ID` .\n",
     "\n",
     "\n"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "PIPELINE_ID='0918568d-758c-46cf-9752-e04a4403cd84' # TO DO: REPLACE WITH YOUR PIPELINE ID "
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "EXPERIMENT_NAME = 'Covertype_Classifier_Training'\n",
     "RUN_ID = 'Run_001'\n",
@@ -610,12 +637,11 @@
     "REPLACE_EXISTING_VERSION = 'True'\n",
     "\n",
     "GCS_STAGING_PATH = '{}/staging'.format(ARTIFACT_STORE_URI)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Exercise\n",
     "\n",
@@ -631,20 +657,20 @@
     "\n",
     "<ql-infobox><b>NOTE:</b> If you need help, you may take a look at the complete solution by navigating to **mlops-on-gcp > workshops > kfp-caip-sklearn > lab-02-kfp-pipeline** and opening **lab-02.ipynb**.\n",
     "</ql-infobox>"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# TO DO: Your code goes here"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Monitoring the run\n",
     "\n",
@@ -656,19 +682,18 @@
     "\n",
     "\n",
     "**NOTE that your pipeline run may fail due to the bug in a BigQuery component that does not handle certain race conditions. If you observe the pipeline failure, re-run the last cell of the notebook to submit another pipeline run or retry the run from the KFP UI**\n"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "<font size=-1>Licensed under the Apache License, Version 2.0 (the \\\"License\\\");\n",
     "you may not use this file except in compliance with the License.\n",
     "You may obtain a copy of the License at [https://www.apache.org/licenses/LICENSE-2.0](https://www.apache.org/licenses/LICENSE-2.0)\n",
     "\n",
     "Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \\\"AS IS\\\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  See the License for the specific language governing permissions and limitations under the License.</font>"
-   ],
-   "metadata": {}
+   ]
   }
  ],
  "metadata": {
